--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "Exercises and projects",
   "main": "index.js",
   "scripts": {
-    "chap2": "node ./chapter2/",
-    "chap2-ex1": "node ./chapter2/LoopingATriangle/",
-    "chap2-ex2": "node ./chapter2/FizzBuzz/",
-    "chap2-ex3": "node ./chapter2/Chessboard/",
+    "chap2": "node ./exercises/chapter2/",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint chapter2/"
+    "lint": "eslint exercises/"
   },
   "repository": {
     "type": "git",
