--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "chap2": "node ./exercises/chapter2/",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "chap3": "node ./exercises/chapter3/",
+    "test": "mocha ./exercises/**/test.js",
     "lint": "eslint exercises/"
   },
   "repository": {
@@ -28,11 +29,13 @@
     "prompts": "^2.2.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.2.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^6.2.0"
   }
 }
