--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,36 +1,50 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Borrow a Method",
-            "program": "${workspaceFolder}/exercises/chapter6/BorrowingMethod/index.js"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Mocha Tests",
-            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-            "args": [
-                "-u",
-                "tdd",
-                "--timeout",
-                "999999",
-                "--colors",
-                "${workspaceFolder}/exercises/**/test.js"
-            ],
-            "internalConsoleOptions": "openOnSessionStart"
-        },
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch A Robot project",
+      "program": "${workspaceFolder}/projects/ARobot/index.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Borrow a Method",
+      "program": "${workspaceFolder}/exercises/chapter6/BorrowingMethod/index.js"
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "restart": true,
+      "protocol": "inspector",
+      "name": "Attach Debug",
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha Tests",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "-u",
+        "tdd",
+        "--timeout",
+        "999999",
+        "--colors",
+        "${workspaceFolder}/exercises/**/test.js"
+      ],
+      "internalConsoleOptions": "openOnSessionStart"
+    },
 
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch exercise 6",
-            "program": "${workspaceFolder}/exercises/chapter6/index.js"
-        }
-    ]
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch exercise 6",
+      "program": "${workspaceFolder}/exercises/chapter6/index.js"
+    }
+  ]
 }
