--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chap3": "node ./exercises/chapter3/",
     "chap4": "node ./exercises/chapter4/",
     "chap5": "node ./exercises/chapter5/",
+    "chap9": "node ./exercises/chapter9/",
     "test": "mocha ./exercises/**/test.js",
     "test-chap2": "mocha ./exercises/chapter2/**/test.js",
     "test-chap3": "mocha ./exercises/chapter3/**/test.js",
@@ -18,6 +19,7 @@
     "test-chap6": "mocha ./exercises/chapter6/**/test.js",
     "test-chap7": "mocha ./exercises/chapter7/**/test.js",
     "test-chap8": "mocha ./exercises/chapter8/**/test.js",
+    "test-chap9": "mocha ./exercises/chapter9/**/test.js",
     "lint": "eslint ./exercises ./projects",
     "lint:fix": "eslint ./exercises ./projects --fix"
   },
